# xivapi-rust

./: Cargo.toml  LICENSE  README.md
src/: client.rs  config.rs  lib.rs
src/models/: mod.rs
src/models/character/: mod.rs
src/models/free_company/: mod.rs
src/models/game_data/: mod.rs
src/models/linkshell/: mod.rs
src/models/pvp_team/: mod.rs
src/utils/: enums.rs  error.rs  mod.rs
